--- a/package.json
+++ b/package.json
@@ -5,11 +5,16 @@
   "dependencies": {
     "aws-amplify": "^1.1.11",
     "aws-amplify-react": "^2.1.5",
+    "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
+    "mdbreact": "^4.8.5-patch.1",
     "react": "^16.6.3",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-router-dom": "latest",
     "react-scripts": "2.1.1",
-    "survey-react": "^1.0.59"
+    "survey-react": "^1.0.59",
+    "surveyjs-widgets": "^1.0.60"
   },
   "scripts": {
     "start": "react-scripts start",
